Some sub_node order post processing, input data tweaks. Have an alignment bug? How the heck?

--- a/asoiaf.css
+++ b/asoiaf.css
@@ -3,3 +3,8 @@ body {
   padding: 0;
   border: 0;
 }
+
+#paper {
+  width: 99%;
+  height: 745px;
+}
